// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuDropdown should be rendered correctly 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="uui-button-box uui-enabled -clickable root type-primary"
    tabindex="0"
    type="button"
  >
    <div
      class="uui-caption"
    >
      Test button
    </div>
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`MainMenuDropdown should be rendered correctly with minimum props 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="uui-button-box uui-enabled -clickable root type-primary"
    tabindex="0"
    type="button"
  >
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
  </button>
</DocumentFragment>
`;
